--- a/web/themes/custom/surface/source/patterns/base/global/global.css
+++ b/web/themes/custom/surface/source/patterns/base/global/global.css
@@ -1,3 +1,4 @@
+
 *,
 *::before,
 *::after {
@@ -45,12 +46,8 @@ abbr:where([title]) {
   text-decoration: underline dotted;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+:where(h1, h2, h3, h4, h5, h6) {
+  color: var(--blue-700);
   font-family: var(--font-secondary);
   font-style: normal;
   font-weight: var(--font-weight-500);
@@ -122,10 +119,7 @@ select {
   text-transform: none;
 }
 
-button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+:where(button, [type='button'], [type='reset'], [type='submit']) {
   appearance: auto;
   background-color: transparent;
   background-image: none;
@@ -181,6 +175,12 @@ figure,
 p,
 pre {
   margin: 0;
+}
+
+blockquote {
+  font-family: var(--font-secondary);
+  font-style: italic;
+  letter-spacing: var(--tracking-wide);
 }
 
 fieldset {
