--- a/web/themes/custom/surface/source/patterns/components/button/button.css
+++ b/web/themes/custom/surface/source/patterns/components/button/button.css
@@ -4,11 +4,11 @@
  */
 
 /* Exclude the initial button styles if the classes `prose` or `button--link` exist in the element. */
-.button:not(:where([class~='prose'] *, .button--link)) {
+.button:not(:where([class~='prose'] *)) {
   align-items: center;
   appearance: none;
-  background-color: var(--gray-300);
-  border-color: var(--gray-300);
+  background-color: var(--grey-300);
+  border-color: var(--grey-300);
   border-radius: 0;
   border-width: 1px;
   color: var(--black);
@@ -31,24 +31,24 @@
   }
 
   &:hover {
-    background-color: var(--gray-200);
-    border-color: var(--gray-300);
+    background-color: var(--grey-200);
+    border-color: var(--grey-300);
   }
 
   &:focus {
-    box-shadow: 0 0 var(--white), 0 0 0 2px var(--gray-400), 0 0 var(--white);
+    box-shadow: 0 0 var(--white), 0 0 0 2px var(--grey-500), 0 0 var(--white);
     outline: 2px solid transparent;
     outline-offset: 2px;
   }
 
   &[aria-expanded='true'] {
     &:focus::after {
-      border-color: var(--gray-300);
+      border-color: var(--grey-300);
     }
   }
 
   &:disabled {
-    background-color: var(--gray-300);
+    background-color: var(--grey-300);
     color: var(--gray-500);
     cursor: not-allowed;
     pointer-events: none;
@@ -78,18 +78,18 @@
 
 /* Button primary */
 .button--primary {
-  background-color: var(--blue-300);
-  border-color: var(--blue-300);
+  background-color: var(--blue-500);
+  border-color: var(--blue-500);
   color: var(--white);
-  font-family: var(--font-body);
+  font-family: var(--font-primary);
 
   &:visited {
-    background-color: var(--blue-300);
+    background-color: var(--blue-500);
     color: var(--white);
   }
 
   &:hover {
-    background-color: var(--blue-500);
+    background-color: var(--blue-700);
     color: var(--white);
   }
 
@@ -105,20 +105,20 @@
 
 /* Button secondary */
 .button--secondary {
-  background-color: var(--gold-500);
-  border-color: var(--gold-500);
+  background-color: var(--gold-100);
+  border-color: var(--gold-100);
   color: var(--blue-700);
-  font-family: var(--font-body);
+  font-family: var(--font-primary);
 
   &:visited {
-    background-color: var(--gold-500);
+    background-color: var(--gold-100);
     color: var(--blue-700);
   }
 
   &:hover {
-    background-color: var(--gold-900);
-    border-color: var(--gold-900);
-    color: var(--white);
+    background-color: var(--gold-500);
+    border-color: var(--gold-500);
+    color: var(--blue-700);
   }
 
   &:focus {
@@ -126,7 +126,7 @@
   }
 
   &:active {
-    background-color: var(--gold-900);
+    background-color: var(--gold-500);
     color: var(--blue-700);
   }
 }
@@ -135,7 +135,7 @@
 .button--outlined {
   background-color: transparent;
   border-color: currentColor;
-  font-family: var(--font-body);
+  font-family: var(--font-primary);
 
   &:hover {
     background-color: var(--black);
