--- a/web/themes/custom/surface/source/patterns/components/featured-card/featured-card.css
+++ b/web/themes/custom/surface/source/patterns/components/featured-card/featured-card.css
@@ -13,17 +13,8 @@
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  /* In Articles, the readtime field needs a little spacing. */
   .readtime {
     margin-block-start: var(--size-2);
-
-    .layout--onecol & {
-      color: var(--white);
-    }
-
-    .bg-santa-barbara-sand & {
-      color: var(--blue-700);
-    }
   }
 }
 
@@ -42,18 +33,8 @@
   justify-content: center;
   max-inline-size: var(--size-mobile);
 
-  .button--secondary {
+  .button {
     margin-block-start: var(--size-4);
-  }
-
-  .eyebrow {
-    .layout--onecol & {
-      color: var(--white);
-    }
-
-    .bg-santa-barbara-sand & {
-      color: var(--blue-700);
-    }
   }
 }
 
@@ -61,46 +42,6 @@
   align-items: center;
   color: inherit;
   display: flex;
-
-  /* Show the label '+ more dates' when an event is recurring and
-  looking at the card component. */
-  .featured-card__more-dates {
-    color: var(--gray-500);
-    font-weight: normal;
-    margin-inline-start: var(--size-3);
-
-    &:hover {
-      color: var(--blue-300);
-    }
-
-    .layout--onecol & {
-      color: var(--white);
-    }
-
-    .bg-santa-barbara-sand & {
-      color: var(--blue-700);
-    }
-  }
-
-  .date {
-    .layout--onecol & {
-      color: var(--white);
-    }
-
-    .bg-santa-barbara-sand & {
-      color: var(--blue-700)
-    }
-  }
-
-  /* Hide upcoming dates <details> tag so only the next event instance date
-  shows up on cards.  We need to know if there are upcoming dates to be
-  able to show the '+ more dates' link/label on cards where there are
-  upcoming dates, however, we don't need to display them. */
-  .recurring-output--wrapper {
-    details {
-      display: none;
-    }
-  }
 }
 
 /* Styles organization name by setting text and icon clor to yellow. */
@@ -109,14 +50,6 @@
   color: var(--blue-300);
   display: flex;
   font-weight: var(--font-weight-600);
-
-  .layout--onecol & {
-    color: var(--white);
-  }
-
-  .bg-santa-barbara-sand & {
-    color: var(--blue-700);
-  }
 
   a,
   a:hover {
@@ -131,21 +64,8 @@
 }
 
 .featured-card__title {
-  color: var(--gray-900);
-  font-family: var(--font-heading);
-  font-size: var(--font-size-6);
-  font-weight: var(--font-weight-400);
   line-height: var(--leading-snug);
   margin-block-end: var(--size-2);
-
-  /* If component is within a one column layout, change text color to white. */
-  .layout--onecol & {
-    color: var(--white);
-  }
-
-  .bg-santa-barbara-sand & {
-    color: var(--blue-700);
-  }
 
   @media (--laptop) {
     font-size: var(--font-size-8);
@@ -154,18 +74,9 @@
 
 .featured-card__subtitle {
   color: var(--gray-900);
-  font-family: var(--font-body);
+  font-family: var(--font-primary);
   font-size: var(--font-size-4);
   margin-block-end: var(--size-3);
-
-  /* If component is within a one column layout, change text color to white. */
-  .layout--onecol & {
-    color: var(--white);
-  }
-
-  .bg-santa-barbara-sand & {
-    color: var(--blue-700);
-  }
 
   @media (--laptop) {
     font-size: var(--font-size-5);
