--- a/web/themes/custom/surface/source/patterns/base/utilities/print.css
+++ b/web/themes/custom/surface/source/patterns/base/utilities/print.css
@@ -47,7 +47,7 @@
 
     &[href]::after {
       content: " <" attr(href) ">";
-      font-family: var(--font-body);
+      font-family: var(--font-secondary);
       font-size: 10pt;
       font-weight: normal;
       text-transform: lowercase;
