--- a/web/themes/custom/surface/source/patterns/components/callout/callout.twig
+++ b/web/themes/custom/surface/source/patterns/components/callout/callout.twig
@@ -1,8 +1,6 @@
 {{ attach_library('surface/callout') }}
 
-<article class="callout container{{ modifier ? ' ' ~ modifier }}
-  {{- attributes ? ' ' ~ attributes.class -}}"
-  {{ attributes ? attributes|without('class') }}>
+<article class="callout container{{ modifier ? ' ' ~ modifier }} {{- attributes ? ' ' ~ attributes.class -}}" {{ attributes ? attributes|without('class') }}>
   <div class="callout__image">
     {{ image }}
 	</div>
