--- a/web/themes/custom/surface/source/patterns/components/eyebrow/eyebrow.css
+++ b/web/themes/custom/surface/source/patterns/components/eyebrow/eyebrow.css
@@ -7,9 +7,13 @@
   color: var(--gray-500);
   display: inline-block;
   font-size: var(--font-size-0);
+  font-weight: var(--font-weight-800);
+  line-height: var(--leading-tight);
+  text-transform: uppercase;
 
   span,
   .eyebrow__link {
+    color: var(--blue-700);
     display: inline-block;
     font-size: inherit;
     line-height: var(--leading-tight);
@@ -18,11 +22,7 @@
 
   &:hover {
     .eyebrow__link {
-      color: var(--blue-300);
+      color: var(--grey-900);
     }
-  }
-
-  &.eyebrow--light {
-    color: var(--white);
   }
 }
